# ephemeris

./: AGENTS.md  EKF_ANALYSIS.md  LICENSE  README.md  TRNSTSWASH6A_NOTES.md  download_data.sh  ekf_moon_orbit.py  estimate_Tsid.py  extract_moon_dec.py  extract_moon_dec_jpl.py  extract_moon_transit.py  extract_sun_transit.py  fit_moon_orbit.py  fpm.toml  make_transit_obs.py  moon_transit_observations.csv  nav1.py  parse_usno_transit.py  plot_moon_positions.py  plot_sun_positions.py  pyproject.toml  recreate_moon_pdf.py  recreate_sun_pdf.py  sun_transit_observations.csv  trnstswash6a.txt  tycho.py  tycho10.py  tycho11.py  tycho12.py  tycho13.py  tycho14.py  tycho15.py  tycho16.py  tycho17.py  tycho2.py  tycho3.py  tycho4.py  tycho5.py  tycho6.py  tycho7.py  (+2 more)
.github/workflows/: ci.yml
app/: artemis_trajectory.f90  batch_pass.inc  compute_from_scratch.f90  create_de441s.f90  generate_observations.f90  greenwich_test.f90  kalman_sim.f90  moon_ekf.f90  newton_sim.f90  sun_ekf.f90  sun_ekf_3body.f90  sun_ekf_kepler.f90
src/: astro_mod.f90  cio_mod.f90  constants_mod.f90  eop_mod.f90  iau76_mod.f90  linalg_mod.f90  nbody2_mod.f90  nutation_mod.f90  obs_reader_mod.f90  spk_reader_mod.f90
test/: test_compute_from_scratch.f90  test_de441_horizons.f90  test_iau76_verify.f90
