[project]
name = "ephemeris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-vision>=12.1",
]
